更新语言包

--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -27,6 +27,7 @@
   <string name="AT_HOME">Di rumah</string>
   <string name="AUDIBLE_ALERT">Pilih sebuah sinyal Audio untuk diputar ketika sensor gerakan terdeteksi</string>
   <string name="Added_successfully">Bind berhasil</string>
+  <string name="Alarm_WeChat">Alarm via WeChet</string>
   <string name="Apr">Apr.</string>
   <string name="Aug">Aug.</string>
   <string name="BACK">Back</string>
@@ -67,9 +68,13 @@
   <string name="CONN_INTERRUPTED">Menghubungkan ke jaringan</string>
   <string name="CREATING">Menambahkan&#8230;</string>
   <string name="CURRENT_PWD">Kata sandi sekarang</string>
+  <string name="Cable_Mode">Mode kabel</string>
+  <string name="Cable_Mode_Start_Hotspot">Sebelum menghidupkan, pastikan ponsel dan perangkat Anda terhubung ke router yang sama</string>
+  <string name="Cable_Mode_Switch_Cancel">Jika dinonaktifkan, ini mungkin menyebabkan offline perangkat, konfirmasikan?</string>
   <string name="CancelingTips">Membatalkan&#8230;</string>
   <string name="Cellular_Data_Method">Data seluler:</string>
   <string name="Cellular_Data_Set_Up">Aktifkan data Mobile di perangkat, gunakan cara di bawah ini, Settings> Mobile data</string>
+  <string name="Change_ID">Ubah ID WeChat</string>
   <string name="ChargingLight">Charging cahaya</string>
   <string name="ChargingLight_BlueFlashing">Biru berkedip: Daya rendah</string>
   <string name="ChargingLight_SteadyBlue">Mantap biru: Penuh</string>
@@ -243,7 +248,9 @@
   <string name="INVALID_CODE">Kode salah</string>
   <string name="IN_APP_SOUND">Di &#8211; APP Notifikasi Suara</string>
   <string name="IN_APP_VIBRATE">Di &#8211; APP Getar</string>
+  <string name="IP_Address">alamat IP</string>
   <string name="I_KNOW">OK</string>
+  <string name="Instructions_Sent">Instruksi dikirim</string>
   <string name="Item_ConnectionFail">Gagal menyambungkan ke jaringan</string>
   <string name="Item_LoadFail">Gagal memuat</string>
   <string name="Item_NoContents">Tidak ada konten</string>
@@ -504,6 +511,8 @@
   <string name="SETTING">Pengaturan&#8230;</string>
   <string name="SETTINGS">Pengaturan</string>
   <string name="SETTINGS_1">Pengaturan</string>
+  <string name="SETTINGS_Wechat_Switch_Cancel">Jika ditutup, maka tidak bisa menerima dorongan WeChat. Unbinding dengan unfollowing "Clever Dog WeChat Official Account".</string>
+  <string name="SETTINGS_Wechat_Switch_Open">Harap fokus pada akun WeChat "Cler Dog WeChat Official Account" dan mengikat, setelah kesuksesan akun WeChat lama tidak akan lagi menerima pesan push.</string>
   <string name="SETTING_DIRECTION">Arah video</string>
   <string name="SETTING_FREE">Set deteksi gerak dan alarm perangkat</string>
   <string name="SETTING_RECORD">Rekaman video</string>
@@ -551,6 +560,21 @@
   <string name="Sharing_Management">Manajemen berbagi</string>
   <string name="Slogan">Homesick, Use Clever Dog</string>
   <string name="Slogan_Zhongxing">Smart Home, for better life</string>
+  <string name="Start_Failed">Mulai gagal</string>
+  <string name="Start_Hotspot">Mulai hotspot</string>
+  <string name="Start_Hotspot_Note">Mulai hotspot dapat menyebabkan offline perangkat; Setelah dinyalakan, tunggu lampu biru menyala</string>
+  <string name="Start_Hotspot_Prompt">Pastikan telepon terhubung ke jaringan WiFi "%s" sebelum membuka</string>
+  <string name="Start_Success">Mulai sukses</string>
+  <string name="Start_instructions">Buka instruksinya</string>
+  <string name="Start_instructions_A">Dalam Akun Resmi WeChat di email Clever Dog yang mengikat, Anda dapat membuka fungsi ini.</string>
+  <string name="Start_instructions_B">Lanjutkan sebagai berikut:</string>
+  <string name="Start_instructions_C">1. Mohon memperhatikan nomor resmi WeChat "Clever Dog WeChat Official Account"</string>
+  <string name="Start_instructions_D">Metode 1: klik pada WeChat di sudut kanan atas \"+\"> Tambahkan Kontak> Akun Resmi, cari \"Akun Pejabat WeChat Clever Dog\" dan kemudian prihatin.</string>
+  <string name="Start_instructions_E">Metode 2: tangkapan layar halaman ini atau simpan kode dua dimensi berikut ke album, di sapaan WeChat menyapu.</string>
+  <string name="Start_instructions_F">2. Bind account</string>
+  <string name="Start_instructions_G">Perhatian \"Akun Administratif Akun Khusus Clever Dog WeChat \", masukkan halaman utama, klik bilah menu layanan, pilih akun pengikat.</string>
+  <string name="Start_instructions_H">Bind account</string>
+  <string name="Start_instructions_I">Harap masukkan akun email anjing Pintar untuk mengikat, seperti lupa kata sandi, tolong masuk ke klien anjing Pintar</string>
   <string name="Switch_Mode">Silahkan beralih ke mode langsung untuk melihat konten pemotretan</string>
   <string name="Switch_Mode_Pop">Tolong aktifkan konten pemotretan jaringan ke mode langsung</string>
   <string name="TAKE_PHOTO">Ambil Foto</string>
@@ -648,7 +672,7 @@
   <string name="Tap1_CameraFun_Timelapse_Tips">Perlu mematikan standby sebelum fotografi selang waktu , anda yakin?</string>
   <string name="Tap1_CameraFun_Timelapse_TipsOption">Yakin</string>
   <string name="Tap1_CameraFun_Timelapse_document">Dapatkan lebih banyak momen&#8211;momen indah dengan fotografi selang waktu</string>
-  <string name="Tap1_CameraFun_Timelapse_hours">%jam</string>
+  <string name="Tap1_CameraFun_Timelapse_hours">%s jam</string>
   <string name="Tap1_CameraFun_UninitializedTips">Gagal membaca Kartu Micro SD</string>
   <string name="Tap1_CameraFun_VideoDirection">Kebalikan</string>
   <string name="Tap1_Camera_BackLiveTips">Back to live</string>
