--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -27,6 +27,7 @@
   <string name="AT_HOME">A la maison</string>
   <string name="AUDIBLE_ALERT">Choisir l\'alerte sonore à jouer lorsqu\'un mouvement est détecté</string>
   <string name="Added_successfully">Liez réussi</string>
+  <string name="Alarm_WeChat">Wechat va recevoir le message d\'avertissement</string>
   <string name="Apr">Apr.</string>
   <string name="Aug">Aug.</string>
   <string name="BACK">Back</string>
@@ -67,9 +68,13 @@
   <string name="CONN_INTERRUPTED">Connexion interrompue, vérifier la caméra</string>
   <string name="CREATING">Création&#8230;</string>
   <string name="CURRENT_PWD">Saisir le mot de passe actuel</string>
+  <string name="Cable_Mode">Mode par fil</string>
+  <string name="Cable_Mode_Start_Hotspot">Avant de vous allumer, assurez&#8211;vous que votre téléphone et votre appareil sont connectés au même routeur</string>
+  <string name="Cable_Mode_Switch_Cancel">Désactivation va mettre l\'appareil en mode hors connexion, êtes&#8211;vous sûr de désactiver?</string>
   <string name="CancelingTips">Annulation&#8230;</string>
   <string name="Cellular_Data_Method">Les données mobiles:</string>
   <string name="Cellular_Data_Set_Up">Activer les données mobiles dans l\'appareil, utilisez ci&#8211;dessous, Paramètres> Données mobiles</string>
+  <string name="Change_ID">Changer le compte de Wechat</string>
   <string name="ChargingLight">Lampe de charge</string>
   <string name="ChargingLight_BlueFlashing">Clignotement bleu: charge</string>
   <string name="ChargingLight_SteadyBlue">Steady blue: Plein</string>
@@ -243,7 +248,9 @@
   <string name="INVALID_CODE">Code de vérification faux</string>
   <string name="IN_APP_SOUND">Alerte sonore</string>
   <string name="IN_APP_VIBRATE">Vibration</string>
+  <string name="IP_Address">IP Adresses</string>
   <string name="I_KNOW">OK</string>
+  <string name="Instructions_Sent">L\'instruction a été envoyée</string>
   <string name="Item_ConnectionFail">Défaillance de la connection du réseau</string>
   <string name="Item_LoadFail">Échec du chargement</string>
   <string name="Item_NoContents">Aucun contenu</string>
@@ -504,6 +511,8 @@
   <string name="SETTING">Installation&#8230;</string>
   <string name="SETTINGS">Réglages</string>
   <string name="SETTINGS_1">Réglages</string>
+  <string name="SETTINGS_Wechat_Switch_Cancel">Vous ne pouvez recevoir plus les messages poussés de Wechat si vous le fermez.Si vous voulez annuler la liaison, veuillez annuler tout à bord le compte public du service officiel du Chien Intelligent .</string>
+  <string name="SETTINGS_Wechat_Switch_Open">Concentrez&#8211;vous sur le compte WeChat \"bord le compte public du service officiel du Chien Intelligent\" et liez, après que le succès de l\'ancien compte WeChat ne recevra plus le message push</string>
   <string name="SETTING_DIRECTION">Orientation</string>
   <string name="SETTING_FREE">Activer la détection de mouvement et l\'alarme d\'un appareil</string>
   <string name="SETTING_RECORD">Enregistrement automatique</string>
@@ -551,6 +560,21 @@
   <string name="Sharing_Management">Partage de la gestion</string>
   <string name="Slogan">Homesick, Use Clever Dog</string>
   <string name="Slogan_Zhongxing">Smart Home, for better life</string>
+  <string name="Start_Failed">Démarrage échoué</string>
+  <string name="Start_Hotspot">Activer les points chauds</string>
+  <string name="Start_Hotspot_Note">Activation du point chaud va mettre l\'appareil hors ligne, après avoir allumé, il faut attendre que le feu bleu du dispositif clignote</string>
+  <string name="Start_Hotspot_Prompt">Assurez&#8211;vous que le téléphone est connecté au réseau WiFi \"%s\" avant d\'ouvrir</string>
+  <string name="Start_Success">Commencez le succès</string>
+  <string name="Start_instructions">Ouvrez les instructions</string>
+  <string name="Start_instructions_A">Dans les comptes officiels de WeChat dans le courrier électronique Clever Dog, vous pouvez ouvrir cette fonction.</string>
+  <string name="Start_instructions_B">Procédez comme suit:</string>
+  <string name="Start_instructions_C">1. Veuillez prêter attention au numéro public de WeChat \"bord le compte public du service officiel du Chien Intelligent\"</string>
+  <string name="Start_instructions_D">Méthode 1: cliquez sur le bouton WeChat dans le coin supérieur droit du \"+\"> Ajouter des contacts> Comptes officiels, recherchez \"bord le compte public du service officiel du Chien Intelligent\" et ensuite concerné.</string>
+  <string name="Start_instructions_E">Méthode 2: capture d\'écran de cette page ou enregistrez le code bidimensionnel suivant dans l\'album, dans l\'attention du balayage WeChat.</string>
+  <string name="Start_instructions_F">2. Lier le compte</string>
+  <string name="Start_instructions_G">À l\'attention des Comptes officiels \"bord le compte public du service officiel du Chien Intelligent\", entrez la page principale, cliquez sur la barre de menu du service, sélectionnez le compte reliant.</string>
+  <string name="Start_instructions_H">Lier le compte</string>
+  <string name="Start_instructions_I">Entrez le compte de courrier électronique intelligent de Chipper pour lier, par exemple, oubliez le mot de passe, allez chez le client de chien intelligent.</string>
   <string name="Switch_Mode">Passez en mode direct pour afficher le contenu de la prise de vue</string>
   <string name="Switch_Mode_Pop">Passez le contenu actuel de la prise de vue réseau au mode direct</string>
   <string name="TAKE_PHOTO">Prendre une photo</string>
@@ -648,7 +672,7 @@
   <string name="Tap1_CameraFun_Timelapse_Tips">Caméra en mode de veille en sécurité pour activer filmer en retard, vous devez désactiver le mode de veille en sécurité,êtes&#8211;vous sûr de déactiver?</string>
   <string name="Tap1_CameraFun_Timelapse_TipsOption">Confirmer de déactiver</string>
   <string name="Tap1_CameraFun_Timelapse_document">Activer le filmer en retard,avoir plus de merveilleux</string>
-  <string name="Tap1_CameraFun_Timelapse_hours">% Heure</string>
+  <string name="Tap1_CameraFun_Timelapse_hours">%s Heure</string>
   <string name="Tap1_CameraFun_UninitializedTips">Echouer à lire la carte de Micro SD</string>
   <string name="Tap1_CameraFun_VideoDirection">Suspendre du haut ver le bas(image inversée)</string>
   <string name="Tap1_Camera_BackLiveTips">Retour à En direct</string>
