--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -27,6 +27,7 @@
   <string name="AT_HOME">A casa</string>
   <string name="AUDIBLE_ALERT">Scegli l\'avviso audio da riprodurre quando viene rilevato un movimento</string>
   <string name="Added_successfully">Aggiunto con successo</string>
+  <string name="Alarm_WeChat">Ricevi il messaggio di allarme con Wechat</string>
   <string name="Apr">Apr.</string>
   <string name="Aug">Aug.</string>
   <string name="BACK">Back</string>
@@ -67,9 +68,13 @@
   <string name="CONN_INTERRUPTED">Collegamento alla rete</string>
   <string name="CREATING">Aggiungere&#8230;</string>
   <string name="CURRENT_PWD">Password attuale non valida</string>
+  <string name="Cable_Mode">Modalità con cavo</string>
+  <string name="Cable_Mode_Start_Hotspot">Prima di accendere, assicurarsi che il telefono e il dispositivo siano collegati allo stesso router</string>
+  <string name="Cable_Mode_Switch_Cancel">Il dispositivo potrebbe essere non in linea se chiudi, sei sicuro di chiudere?</string>
   <string name="CancelingTips">Annullando&#8230;</string>
   <string name="Cellular_Data_Method">Dati mobili:</string>
   <string name="Cellular_Data_Set_Up">Abilita i dati mobili nel dispositivo, per favore usa il modo seguente, Impostazioni> Dati mobili</string>
+  <string name="Change_ID">Cambia l\'account Wechat</string>
   <string name="ChargingLight">Spia Charging</string>
   <string name="ChargingLight_BlueFlashing">Blu infiammante: Charging</string>
   <string name="ChargingLight_SteadyBlue">Blu fisso: Pieno</string>
@@ -243,7 +248,9 @@
   <string name="INVALID_CODE">Codice non valido</string>
   <string name="IN_APP_SOUND">Suoneria</string>
   <string name="IN_APP_VIBRATE">Vibrazione</string>
+  <string name="IP_Address">Indirizzo IP</string>
   <string name="I_KNOW">OK</string>
+  <string name="Instructions_Sent">Le istruzioni sono inviate</string>
   <string name="Item_ConnectionFail">La connessione rete non riuscita</string>
   <string name="Item_LoadFail">Impossibile caricare</string>
   <string name="Item_NoContents">Senza contenuto</string>
@@ -504,6 +511,8 @@
   <string name="SETTING">Impostazioni&#8230;</string>
   <string name="SETTINGS">Impostazioni</string>
   <string name="SETTINGS_1">Impostazioni Funzioni</string>
+  <string name="SETTINGS_Wechat_Switch_Cancel">Non puoi ricevere il push di Wechat se chiudi. Se vuoi cancellare il collegamento, ti preghiamo di vai a Wechat per smettere di seguire l\'account ufficiale \"Servizio di Wechat Ufficiale di Clever Dog\".</string>
+  <string name="SETTINGS_Wechat_Switch_Open">Si prega di concentrarsi sull\'account WeChat \"Servizio di Wechat Ufficiale di Clever Dog\" e legare, dopo il successo del vecchio account WeChat, non riceverà più il messaggio</string>
   <string name="SETTING_DIRECTION">Direzione video</string>
   <string name="SETTING_FREE">Usare tutti I rilevatori di movimento come default</string>
   <string name="SETTING_RECORD">Registra video</string>
@@ -551,6 +560,21 @@
   <string name="Sharing_Management">Condivisione della gestione</string>
   <string name="Slogan">Sicurezza domestica? usa Clever Dog</string>
   <string name="Slogan_Zhongxing">Smart Home, for better life</string>
+  <string name="Start_Failed">Inizio non riuscito</string>
+  <string name="Start_Hotspot">Apri hotspot</string>
+  <string name="Start_Hotspot_Note">Il dispositivo potrebbe essere non in linea se apri hotspot, dopo aver aperto, ti preghiamo di aspettare il lampeggiamento della luce blu del dispositivo</string>
+  <string name="Start_Hotspot_Prompt">Prima di aprire, assicurarsi che il telefono sia connesso alla rete WiFi \"%s\"</string>
+  <string name="Start_Success">Avviare il successo</string>
+  <string name="Start_instructions">Aprire le istruzioni</string>
+  <string name="Start_instructions_A">Nei Conti ufficiali di WeChat nell\'e&#8211;mail di Clever Dog, è possibile aprire questa funzione.</string>
+  <string name="Start_instructions_B">Procedere come segue:</string>
+  <string name="Start_instructions_C">1. Si prega di prestare attenzione al numero pubblico WeChat \"Servizio di Wechat Ufficiale di Clever Dog\"</string>
+  <string name="Start_instructions_D">Metodo 1: fare clic sul WeChat nell\'angolo in alto a destra della casella \"+\"> Aggiungi contatti> Account ufficiali, cercare \"Servizio di Wechat Ufficiale di Clever Dog\" e quindi interessati.</string>
+  <string name="Start_instructions_E">Metodo 2: schermata di questa pagina o salvare il seguente codice bidimensionale nell\'album, nello spazzare WeChat spazzare attenzione.</string>
+  <string name="Start_instructions_F">2. Contabile</string>
+  <string name="Start_instructions_G">Attenzione \"Servizio di Wechat Ufficiale di Clever Dog\" account ufficiali, entra nella pagina principale, fai clic sulla barra dei menu del servizio, seleziona l\'account di associazione.</string>
+  <string name="Start_instructions_H">Bind account</string>
+  <string name="Start_instructions_I">Si prega di inserire Clever dog email per legare, come dimenticare la password, vai al client Clever Dog Back</string>
   <string name="Switch_Mode">Si prega di passare alla modalità diretta per visualizzare i contenuti di ripresa</string>
   <string name="Switch_Mode_Pop">Si prega di passare i contenuti di ripresa in rete corrente alla modalità diretta</string>
   <string name="TAKE_PHOTO">Scatta immagine</string>
@@ -648,7 +672,7 @@
   <string name="Tap1_CameraFun_Timelapse_Tips">La videocamera è durante il periodo sicuro di standby sicuro, per accendere al Timelapse serve la disattivazione della modalità di standby sicuro, conferma la disattivazione?</string>
   <string name="Tap1_CameraFun_Timelapse_TipsOption">Disattivazione confermata</string>
   <string name="Tap1_CameraFun_Timelapse_document">Usando il Timelapse si cattureranno più momenti meravigliosi</string>
-  <string name="Tap1_CameraFun_Timelapse_hours">% ore</string>
+  <string name="Tap1_CameraFun_Timelapse_hours">%s ore</string>
   <string name="Tap1_CameraFun_UninitializedTips">Errore in lettura SD Card</string>
   <string name="Tap1_CameraFun_VideoDirection">Inverso (Immagine rovesciata)</string>
   <string name="Tap1_Camera_BackLiveTips">Torna In diretta</string>
