--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -27,6 +27,7 @@
   <string name="AT_HOME">回家模式</string>
   <string name="AUDIBLE_ALERT">侦测到异常时，设备将播放声音</string>
   <string name="Added_successfully">绑定成功</string>
+  <string name="Alarm_WeChat">微信接收报警消息</string>
   <string name="Apr">4月</string>
   <string name="Aug">8月</string>
   <string name="BACK">返回</string>
@@ -67,9 +68,13 @@
   <string name="CONN_INTERRUPTED">连接中断，请检查摄像头网络</string>
   <string name="CREATING">正在创建，请稍候&#8230;</string>
   <string name="CURRENT_PWD">请输入当前密码</string>
+  <string name="Cable_Mode">有线模式</string>
+  <string name="Cable_Mode_Start_Hotspot">开启前请确定手机和设备已连接到同一路由器</string>
+  <string name="Cable_Mode_Switch_Cancel">关闭可能会使设备离线，确定关闭？</string>
   <string name="CancelingTips">正在取消&#8230;</string>
   <string name="Cellular_Data_Method">移动数据网络：</string>
   <string name="Cellular_Data_Set_Up">在设备的【设置>移动网络】中启用移动数据网络。</string>
+  <string name="Change_ID">更换微信号</string>
   <string name="ChargingLight">充电灯</string>
   <string name="ChargingLight_BlueFlashing">蓝色闪烁：正在充电</string>
   <string name="ChargingLight_SteadyBlue">蓝色长亮：充满</string>
@@ -243,7 +248,9 @@
   <string name="INVALID_CODE">验证码已过期</string>
   <string name="IN_APP_SOUND">声音</string>
   <string name="IN_APP_VIBRATE">振动</string>
+  <string name="IP_Address">IP地址</string>
   <string name="I_KNOW">我知道了</string>
+  <string name="Instructions_Sent">指令已发送</string>
   <string name="Item_ConnectionFail">网络连接失败</string>
   <string name="Item_LoadFail">加载失败</string>
   <string name="Item_NoContents">无内容</string>
@@ -375,7 +382,7 @@
   <string name="PROFILE_PHOTO">头像</string>
   <string name="PULL_TO_LOAD">上拉加载更多</string>
   <string name="PULL_TO_REFRESH">下拉刷新</string>
-  <string name="PUSH_MSG">接收消息通知</string>
+  <string name="PUSH_MSG">APP接收消息通知</string>
   <string name="PWD_CHANGED">账号密码已修改，请重新登录</string>
   <string name="PWD_ERR">请输入确认密码</string>
   <string name="PWD_ERR_1">两次输入的密码不一致</string>
@@ -504,6 +511,8 @@
   <string name="SETTING">正在设置&#8230;</string>
   <string name="SETTINGS">设置</string>
   <string name="SETTINGS_1">功能设置</string>
+  <string name="SETTINGS_Wechat_Switch_Cancel">关闭将无法接收微信推送。想取消绑定请前往微信取消关注“加菲狗官微服务”公众号。</string>
+  <string name="SETTINGS_Wechat_Switch_Open">请在新的微信号上关注"加菲狗官微服务"并绑定，成功后旧的微信号将不再接收消息推送</string>
   <string name="SETTING_DIRECTION">视频方向</string>
   <string name="SETTING_FREE">随意设置单个设备的移动侦测及报警</string>
   <string name="SETTING_RECORD">自动录像</string>
@@ -551,6 +560,21 @@
   <string name="Sharing_Management">分享管理</string>
   <string name="Slogan">想家，就用加菲狗</string>
   <string name="Slogan_Zhongxing">美好生活 智能家居</string>
+  <string name="Start_Failed">开启失败</string>
+  <string name="Start_Hotspot">开启热点</string>
+  <string name="Start_Hotspot_Note">开启热点会使设备离线，开启后，请等待设备蓝灯闪烁</string>
+  <string name="Start_Hotspot_Prompt">开启前请确定手机已连接到“%s”WiFi网络</string>
+  <string name="Start_Success">开启成功</string>
+  <string name="Start_instructions">开启说明</string>
+  <string name="Start_instructions_A">在微信公众号里绑定加菲狗手机/邮箱，即可开启此功能。</string>
+  <string name="Start_instructions_B">步骤如下：</string>
+  <string name="Start_instructions_C">1. 请先关注微信公众号“加菲狗官微服务”</string>
+  <string name="Start_instructions_D">方法一：点击微信右上角的“+”号 > 添加朋友 > 公众号，搜索 “加菲狗官微服务”然后关注。</string>
+  <string name="Start_instructions_E">方法二：截图此页面，在微信 里扫一扫关注。</string>
+  <string name="Start_instructions_F">2. 绑定账号</string>
+  <string name="Start_instructions_G">关注“加菲狗官微服务”公众号后，进入主页面，点击菜单栏的“服务”，选择“绑定账号”。</string>
+  <string name="Start_instructions_H">绑定账号</string>
+  <string name="Start_instructions_I">请输入加菲狗手机/邮箱账号进行绑定，如忘记密码请到加菲狗客户端找回</string>
   <string name="Switch_Mode">拍摄内容请切换至直连模式查看</string>
   <string name="Switch_Mode_Pop">当前网络拍摄内容请切换至直连模式查看</string>
   <string name="TAKE_PHOTO">拍一张</string>
@@ -648,7 +672,7 @@
   <string name="Tap1_CameraFun_Timelapse_Tips">摄像头安全待机中，开启延时摄影，需关闭安全待机，是否确认关闭？</string>
   <string name="Tap1_CameraFun_Timelapse_TipsOption">确认关闭</string>
   <string name="Tap1_CameraFun_Timelapse_document">开启延时摄影，更多精彩纷呈</string>
-  <string name="Tap1_CameraFun_Timelapse_hours">%小时</string>
+  <string name="Tap1_CameraFun_Timelapse_hours">%s小时</string>
   <string name="Tap1_CameraFun_UninitializedTips">Micro SD卡读写失败</string>
   <string name="Tap1_CameraFun_VideoDirection">倒挂（画面翻转）</string>
   <string name="Tap1_Camera_BackLiveTips">点击返回直播</string>
